5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4429/executions/1679_1879.log
== TEST (2019-05-01 23:13:34) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
faltas=float(input('digite faltas:   '))
print(extra,'extras e',faltas,'de falta')
h = extra - 0.25 * faltas
if(h > 400):
	print('R$',round(500.0, 2))
else:
	print('R$',round(100.0, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(extra,'extras e',faltas,'de falta')
NameError: name 'extra' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 23:13:39) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
faltas=float(input('digite faltas:   '))
print(extra,'extras e',faltas,'de falta')
h = extra - 0.25 * faltas
if(h > 400):
	print('R$',round(500.0, 2))
else:
	print('R$',round(100.0, 2))

-- EXECUTION TIME:
0.207977
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1679/1879/main.py", line 3, in <module>
    print(extra,'extras e',faltas,'de falta')
NameError: name 'extra' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 15:12:12) 
-- CODE:
extra = float(input('digite o numero de horas extras: '))
faltas=float(input('digite faltas:   '))
print(extra,'extras e',faltas,'de falta')
h = extra - 0.25 * faltas
if(h > 400):
	print('R$',round(500.0, 2))
else:
	print('R$',round(100.0, 2))
				 


-- EXECUTION TIME:
0.151726
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 500.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 100.0
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 100.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
